--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,8 @@
                     <li><a href="{% url 'account:profile' %}">Profile</a></li>
                     <li><a href="{% url 'account:logout' %}">Logout</a></li>
                     <li><a href="{% url 'account:edit_profile' %}">Edit Profile</a></li>
+                    <li><a href="{% url 'goals:goal_create' %}">Add Goal</a></li>
+                    <li><a href="{% url 'goals:list' %}">View Goals</a></li>
                 </ul>
 {#                <ul class="nav navbar-nav navbar-right">#}
 {#                    <li><a href="{% url 'account:logout' %}">Log out</a></li>#}
