--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}
-        <title>Base</title>
+        <title>Recover Right</title>
         {% endblock %}
     </head>
     <body>
@@ -25,14 +24,19 @@
                 {% if user.is_authenticated %}
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'account:profile' %}">Profile</a></li>
-                    <li><a href="{% url 'account:logout' %}">Logout</a></li>
                     <li><a href="{% url 'account:edit_profile' %}">Edit Profile</a></li>
                     <li><a href="{% url 'goals:goal_create' %}">Add Goal</a></li>
-                    <li><a href="{% url 'goals:list' %}">View Goals</a></li>
+{#                    <li><a href="{% url 'goals:list' %}">View Goals</a></li>#}
+                    <li><a href="{% url 'nutrition:nutrition' %}">Nutrition</a></li>
+                    <li><a href="{% url 'nutrition:exercise' %}">Exercise</a></li>
+
+{#                    <li><a href="{% url 'workout:workout' %}">Workout</a></li>#}
+
+
                 </ul>
-{#                <ul class="nav navbar-nav navbar-right">#}
-{#                    <li><a href="{% url 'account:logout' %}">Log out</a></li>#}
-{#                </ul>#}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{% url 'account:logout' %}">Log out</a></li>
+                </ul>
                 {% else %}
 {#                <ul class="nav navbar-nav">#}
 {#                    <li><a href="{% url 'accounts:reset_password' %}">Reset Password</a></li>#}
@@ -50,9 +54,9 @@
             <h1>Base</h1>
         {% endblock %}
     </body>
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+{#    <script#}
+{#      src="https://code.jquery.com/jquery-3.1.1.min.js"#}
+{#      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="#}
+{#      crossorigin="anonymous"></script>#}
+{#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>#}
 </html>
