--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,30 +1,213 @@
 {#{% extends 'base.html' %}#}
+{##}
+{#{% block body %}#}
+{#    <div class="container">#}
+{#        <div class="columns is-mobile">#}
+{#            <div class="column is-half is-offset-one-quarter">#}
+{#                <h3 class="title is-size-3">Login</h3>#}
+{#                <form action="{% url 'account:login' %}" method="post">#}
+{#                    {% csrf_token %}#}
+{#                    {% for non_field_error in form.non_field_errors %}#}
+{#                        <p class="help is-danger">{{ non_field_error }}</p>#}
+{#                    {% endfor %}#}
+{#                    {% for field in form %}#}
+{#                        <div class="field">#}
+{#                            <label for="{{ field.id_for_label }}" class="label">{{ field.html_name }}</label>#}
+{#                            {{ field }}#}
+{#                        {% for error in field.errors %}#}
+{#                            <p class="help is-danger">{{ error }}</p>#}
+{#                        {% endfor %}#}
+{#                        </div>#}
+{#                    {% endfor %}#}
+{#                    <input type="submit" value="LOGIN" class="button is-primary">#}
+{#                </form>#}
+{#            </div>#}
+{#        <div class="panel-footer">#}
+{#            No account? <a href="{% url 'account:register' %}">Click here</a> to register.#}
+{#        </div>#}
+{#        </div>#}
+{#    </div>#}
+{#{% endblock %}#}
 
-{% block content %}
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+img.avatar {
+    width: 40%;
+    border-radius: 50%;
+}
+
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+}
+</style>
+</head>
+<body>
+
+<h2>RecoverRight Login Page</h2>
+
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+
+<div id="id01" class="modal">
+
+{#    <form class="modal-content animate" action="{% url 'account:profile' %}" method="post">}#}
+        <form class="modal-content animate" action="{% url 'account:login' %}" method="post">
+            {% csrf_token %}
+            {% for non_field_error in form.non_field_errors %}
+                <p class="help is-danger">{{ non_field_error }}</p>
+            {% endfor %}
+
     <div class="container">
-        <div class="columns is-mobile">
-            <div class="column is-half is-offset-one-quarter">
-                <h3 class="title is-size-3">Login</h3>
-                <form action="{% url 'account:login' %}" method="post">
-                    {% csrf_token %}
-                    {% for non_field_error in form.non_field_errors %}
-                        <p class="help is-danger">{{ non_field_error }}</p>
-                    {% endfor %}
-                    {% for field in form %}
-                        <div class="field">
-                            <label for="{{ field.id_for_label }}" class="label">{{ field.html_name }}</label>
-                            {{ field }}
-                        {% for error in field.errors %}
-                            <p class="help is-danger">{{ error }}</p>
-                        {% endfor %}
-                        </div>
-                    {% endfor %}
-                    <input type="submit" value="LOGIN" class="button is-primary">
-                </form>
-            </div>
-        <div class="panel-footer">
-            No account? <a href="{% url 'account:register' %}">Click here</a> to register.
-        </div>
-        </div>
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="username" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="password" required>
+
+      <button type="submit">Login</button>
+{#      <label>#}
+{#        <input type="checkbox" checked="checked" name="remember"> Remember me#}
+{#      </label>#}
     </div>
-{% endblock %}
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+{#      <span class="psw">Forgot <a href="#">password?</a></span>#}
+    </div>
+  </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+
+<div class="panel-footer">
+    No account? <a href="{% url 'account:register' %}">Click here</a> to register.
+</div>
+
+
+</body>
+</html>
