--- a/templates/base.html
+++ b/templates/base.html
@@ -1,62 +1,116 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {% block head %}
-        <title>Recover Right</title>
-        {% endblock %}
-    </head>
-    <body>
-        <br>
-        <div class="container">
-            <nav class="navbar navbar-default">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">RecoverRight</a>
-              </div>
-              <div id="navbar" class="navbar-collapse collapse">
-                {% if user.is_authenticated %}
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'account:profile' %}">Profile</a></li>
-                    <li><a href="{% url 'account:edit_profile' %}">Edit Profile</a></li>
-                    <li><a href="{% url 'goals:goal_create' %}">Add Goal</a></li>
-{#                    <li><a href="{% url 'goals:list' %}">View Goals</a></li>#}
-                    <li><a href="{% url 'nutrition:nutrition' %}">Nutrition</a></li>
-                    <li><a href="{% url 'nutrition:exercise' %}">Exercise</a></li>
-
-{#                    <li><a href="{% url 'workout:workout' %}">Workout</a></li>#}
-
-
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'account:logout' %}">Log out</a></li>
-                </ul>
-                {% else %}
+{#<html>#}
+{#<head>#}
+{#    <script src="https://code.jquery.com/jquery-1.12.4.min.js"#}
+{#            integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="#}
+{#            crossorigin="anonymous"></script>#}
+{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>#}
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"#}
+{#          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"#}
+{#          crossorigin="anonymous">#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
+{##}
+{##}
+{#    {% block head %}#}
+{#        <title>Recover Right</title>#}
+{#    {% endblock %}#}
+{#</head>#}
+{#    <body>#}
+{#        <br>#}
+{#        <div class="container">#}
+{#            <nav class="navbar navbar-default">#}
+{#            <div class="container-fluid">#}
+{#              <div class="navbar-header">#}
+{#                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">#}
+{#                  <span class="sr-only">Toggle navigation</span>#}
+{#                  <span class="icon-bar"></span>#}
+{#                  <span class="icon-bar"></span>#}
+{#                  <span class="icon-bar"></span>#}
+{#                </button>#}
+{#                <a class="navbar-brand" href="/">RecoverRight</a>#}
+{#              </div>#}
+{#              <div id="navbar" class="navbar-collapse collapse">#}
+{#                {% if user.is_authenticated %}#}
 {#                <ul class="nav navbar-nav">#}
-{#                    <li><a href="{% url 'accounts:reset_password' %}">Reset Password</a></li>#}
+{#                    <li><a href="{% url 'account:profile' %}">Profile</a></li>#}
+{#                    <li><a href="{% url 'account:edit_profile' %}">Edit Profile</a></li>#}
+{#                    <li><a href="{% url 'goals:goal_create' %}">Add Goal</a></li>#}
+{#                    <li><a href="{% url 'goals:goal_list' %}">View Goals</a></li>#}
+{#                    <li><a href="{% url 'nutrition:nutrition' %}">Nutrition</a></li>#}
+{#                    <li><a href="{% url 'nutrition:exercise' %}">Exercise</a></li>#}
+{##}
+{##}
+{##}
 {#                </ul>#}
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="{% url 'account:login' %}">Login</a></li>
-                  <li><a href="{% url 'account:register' %}">Register</a></li>
-                </ul>
-                {% endif %}
-              </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-          </nav>
-        </div>
-        {% block body %}
-            <h1>Base</h1>
-        {% endblock %}
-    </body>
+{#                <ul class="nav navbar-nav navbar-right">#}
+{#                   <li><a href="{% url 'account:logout' %}">Log out</a></li>#}
+{##}
+{#                </ul>#}
+{#                {% else %}#}
+{#                <ul class="nav navbar-nav navbar-right">#}
+{#                  <li><a href="{% url 'account:login' %}">Login</a></li>#}
+{#                  <li><a href="{% url 'account:register' %}">Register</a></li>#}
+{#                </ul>#}
+{#                {% endif %}#}
+{#              </div><!--/.nav-collapse -->#}
+{#            </div><!--/.container-fluid -->#}
+{#          </nav>#}
+{#        </div>#}
+{#       {% block body %}#}
+{#            <h1>Base</h1>#}
+{#        {% endblock %}#}
+{#    </body>#}
 {#    <script#}
 {#      src="https://code.jquery.com/jquery-3.1.1.min.js"#}
 {#      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="#}
 {#      crossorigin="anonymous"></script>#}
 {#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>#}
+{#</html>#}
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>RecoverRight</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">RecoverRight</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="{% url 'account:profile' %}">Profile</a></li>
+                <li><a href="{% url 'account:edit_profile' %}">Edit Profile</a></li>
+                <li><a href="{% url 'nutrition:nutrition' %}">Nutrition</a></li>
+                <li><a href="{% url 'nutrition:exercise' %}">Exercise</a></li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Goals <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'goals:goal_create' %}">Add Goal</a></li>
+                        <li><a href="{% url 'goals:goal_list' %}">View Goals</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'account:logout' %}">Log out</a></li>
+            </ul>
+
+        </div>
+    </nav>
+
+    <div class="container">
+    </div>
+    {% block body %}
+        <h1>Base</h1>
+    {% endblock %}
+
+
+</body>
 </html>
