--- a/templates/goals/goal_create.html
+++ b/templates/goals/goal_create.html
@@ -1,12 +1,14 @@
-{#{% extends 'base.html' %}#}
+{% extends 'base.html' %}
 
-{% block content %}
-    <div class="create-goal">
+{% block body %}
+    <div class="container">
+{#    <div class="create-goal">#}
         <h2>Create a New Goal</h2>
         <form class="site-form" action="{% url 'goals:goal_create' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="Create">
+            {{ form.as_p }}
+            <br>
+            <input type="submit" value="Create Goal">
         </form>
     </div>
 {% endblock %}
