--- a/templates/nutrition/index.html
+++ b/templates/nutrition/index.html
@@ -1,12 +1,12 @@
-{#{% extends 'base.html' %}#}
-
-{% block content %}
-
-    <form action="/" method="GET">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Save"/>
-    </form>
-
-
-{% endblock %}
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head>#}
+{#  <title>FC-python wrapper</title>#}
+{#  {% load static %} #}
+{#   <script type="text/javascript" src="{% static "charts/js" %}"></script>#}
+{#   <script type="text/javascript" src="{% static "charts/js/themes/fusioncharts.theme.fint.js" %}"></script>#}
+{#</head>#}
+{#<body>#}
+{#  <div id="chart-1">{{ output|safe }}</div>#}
+{#</body>#}
+{#</html>#}
