--- a/templates/nutrition/nutrition.html
+++ b/templates/nutrition/nutrition.html
@@ -1,22 +1,30 @@
-{#{% extends 'base.html' %}#}
+{% extends 'base.html' %}
 
-{% block content %}
+{% block body %}
+    <div class="container">
+
   <h2>Nutritionix API</h2>
 
   <form action="" method="post">
       {% csrf_token %}
       {{ form.as_p }}
-    <button type="submit">Search Food info</button>
+{#    <button type="submit">Search Food info</button>#}
+      <button type="submit" class="btn btn-success">Search Nutrition</button>
+
   </form>
 
-    {% block body %}
-    <div class="container">
+{#    {% block body %}#}
+        <br>
         <p>Food name:  {{ search_results.food_name }}</p>
         <p>Calories:  {{ search_results.nf_calories }}</p>
-        <p>Protein:  {{ search_results.nf_protein }}</p>
-        <p>Fats:  {{ search_results.nf_total_fat }}</p>
+        <p>Protein:  {{ search_results.nf_protein }} g</p>
+        <p>Fats:  {{ search_results.nf_total_fat }} g</p>
+        <p>Of which saturated fats: {{ search_results.nf_saturated_fat}} g</p>
+        <p>Weight:  {{ search_results.serving_weight_grams }} grams</p>
+{#        <p>Time consumed: {{ search_results.consumed_at }}</p>#}
+
     </div>
 {% endblock %}
 
 
-{% endblock %}
+{#{% endblock %}#}
