--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -180,15 +180,19 @@ span.psw {
       <input type="password" placeholder="Enter Password" name="password" required>
 
       <button type="submit">Login</button>
-{#      <label>#}
-{#        <input type="checkbox" checked="checked" name="remember"> Remember me#}
-{#      </label>#}
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
     </div>
 
     <div class="container" style="background-color:#f1f1f1">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
 {#      <span class="psw">Forgot <a href="#">password?</a></span>#}
     </div>
+            <div class="container register">
+                <p>Don't have an account? <a href="{% url 'account:register' %}">Register Here</a>.</p>
+            </div>
+
   </form>
 </div>
 
@@ -205,8 +209,9 @@ window.onclick = function(event) {
 </script>
 
 <div class="panel-footer">
-    No account? <a href="{% url 'account:register' %}">Click here</a> to register.
+   No account? <a href="{% url 'account:register' %}">Click here</a> to register.
 </div>
+
 
 
 </body>
