--- a/templates/account/edit_profile.html
+++ b/templates/account/edit_profile.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-        <form method="POST" action=".">
+        <form method="POST" enctype="multipart/form-data" action=".">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Submit</button>
