--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -5,73 +5,28 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <p>Username: {{ user }}</p>
-        <p>Age: {{ user.userprofilemodel.age }}</p>
-        <p>Height: {{ user.userprofilemodel.height }} CM </p>
-        <p>Weight: {{ user.userprofilemodel.weight }} KG </p>
-    </div>
-{% endblock %}
 
-{#<!DOCTYPE html>#}
-{#<html>#}
-{#<head>#}
-{#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
-{#<style>#}
-{#.card {#}
-{#  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);#}
-{#  max-width: 300px;#}
-{#  margin: auto;#}
-{#  text-align: center;#}
-{#  font-family: arial;#}
-{#}#}
-{##}
-{#.title {#}
-{#  color: grey;#}
-{#  font-size: 18px;#}
-{#}#}
-{##}
-{#button {#}
-{#  border: none;#}
-{#  outline: 0;#}
-{#  display: inline-block;#}
-{#  padding: 8px;#}
-{#  color: white;#}
-{#  background-color: #000;#}
-{#  text-align: center;#}
-{#  cursor: pointer;#}
-{#  width: 100%;#}
-{#  font-size: 18px;#}
-{#}#}
-{##}
-{#a {#}
-{#  text-decoration: none;#}
-{#  font-size: 22px;#}
-{#  color: black;#}
-{#}#}
-{##}
-{#button:hover, a:hover {#}
-{#  opacity: 0.7;#}
-{#}#}
-{#</style>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#<h2 style="text-align:center">User Profile Card</h2>#}
-{##}
-{#<div class="card">#}
-{#  <img src="/w3images/team2.jpg" alt="John" style="width:100%">#}
-{#  <h1>Profile</h1>#}
-{#  <p class="title">CEO & Founder, Example</p>#}
-{#  <p>Harvard University</p>#}
-{#  <div style="margin: 24px 0;">#}
-{#        <p>Username: {{ user }}</p>#}
-{#        <p>Age: {{ user.userprofilemodel.age }}</p>#}
-{#        <p>Height: {{ user.userprofilemodel.height }} CM </p>#}
-{#        <p>Weight: {{ user.userprofilemodel.weight }} KG </p>#}
-{# </div>#}
-{# <p><button>Contact</button></p>#}
-{#</div>#}
-{##}
-{#</body>#}
-{#</html>#}
+    <!DOCTYPE html>
+    <html>
+    <body>
+
+
+    <div class="container">
+        <h1>{{ user }}s Profile </h1>
+        <div style="margin: 24px 0;">
+            <p>Username: {{ user }}</p>
+            <p>Email: {{ user.userprofilemodel.email }}</p>
+            <p>Age: {{ user.userprofilemodel.age }}</p>
+            <p>Height: {{ user.userprofilemodel.height }} CM </p>
+            <p>Weight: {{ user.userprofilemodel.weight }} KG </p>
+            <p>User Bio: {{ user.userprofilemodel.bio }} </p>
+            {% if user.userprofilemodel.image %}
+                <img src="{{ user.userprofilemodel.image.url }}" width="240">
+            {% endif %}
+
+        </div>
+    </div>
+    </body>
+    </html>
+    {#    </div>#}
+{% endblock %}
