--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -1,204 +1,170 @@
-{#{% extends 'base.html' %}#}
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<style>#}
+{#    body {font-family: Arial, Helvetica, sans-serif;}#}
+{#    * {box-sizing: border-box}#}
+{#    /* Full-width input fields */#}
+{#    input[type=text], input[type=password] {#}
+{#        width: 100%;#}
+{#        padding: 15px;#}
+{#        margin: 5px 0 22px 0;#}
+{#        display: inline-block;#}
+{#        border: none;#}
+{#        background: #f1f1f1;#}
+{#    }#}
 {##}
-{#{% block body %}#}
-{#    <div class="container">#}
-{#        <div class="columns is-mobile">#}
-{#            <div class="column is-half is-offset-one-quarter">#}
-{#                <div class="content"><h2>Register</h2></div>#}
-{#                <form action="{% url 'account:register' %}" method="post">#}
-{#                    {% csrf_token %}#}
-{#                    {% for non_field_error in form.non_field_errors %}#}
-{#                        <p class="help is-danger">{{ non_field_error }}</p>#}
-{#                    {% endfor %}#}
-{#                    {% for field in form %}#}
-{#                        <div class="field">#}
-{#                            <label for="{{ field.id_for_label }}" class="label">{{ field.html_name }}</label>#}
-{#                            {{ field }}#}
-{#                        {% for error in field.errors %}#}
-{#                            <p class="help is-danger">{{ error }}</p>#}
-{#                        {% endfor %}#}
-{#                        </div>#}
-{#                    {% endfor %}#}
-{#                    <input type="submit" value="SIGN UP" class="button is-primary">#}
-{#                </form>#}
+{#    /* Add a background color when the inputs get focus */#}
+{#    input[type=text]:focus, input[type=password]:focus {#}
+{#        background-color: #ddd;#}
+{#        outline: none;#}
+{#    }#}
+{##}
+{#    /* Add Zoom Animation */#}
+{#.animate {#}
+{#    -webkit-animation: animatezoom 0.6s;#}
+{#    animation: animatezoom 0.6s#}
+{#}#}
+{##}
+{##}
+{#    /* Set a style for all buttons */#}
+{#    button {#}
+{#        background-color: #4CAF50;#}
+{#        color: white;#}
+{#        padding: 14px 20px;#}
+{#        margin: 8px 0;#}
+{#        border: none;#}
+{#        cursor: pointer;#}
+{#        width: 100%;#}
+{#        opacity: 0.9;#}
+{#    }#}
+{##}
+{#    button:hover {#}
+{#        opacity:1;#}
+{#    }#}
+{##}
+{#    /* Extra styles for the cancel button */#}
+{#    .cancelbtn {#}
+{#        padding: 14px 20px;#}
+{#        background-color: #f44336;#}
+{#    }#}
+{##}
+{#    /* Float cancel and signup buttons and add an equal width */#}
+{#    .cancelbtn, .signupbtn {#}
+{#        float: left;#}
+{#        width: 50%;#}
+{#    }#}
+{##}
+{#    /* Add padding to container elements */#}
+{#    .container {#}
+{#        padding: 16px;#}
+{#    }#}
+{##}
+{#    /* The Modal (background) */#}
+{#    .modal {#}
+{#        display: none; /* Hidden by default */#}
+{#        position: fixed; /* Stay in place */#}
+{#        z-index: 1; /* Sit on top */#}
+{#        left: 0;#}
+{#        top: 0;#}
+{#        width: 100%; /* Full width */#}
+{#        height: 100%; /* Full height */#}
+{#        overflow: auto; /* Enable scroll if needed */#}
+{#        background-color: #474e5d;#}
+{#        padding-top: 50px;#}
+{#    }#}
+{##}
+{#    /* Modal Content/Box */#}
+{#    .modal-content {#}
+{#        background-color: #fefefe;#}
+{#        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */#}
+{#        border: 1px solid #888;#}
+{#        width: 80%; /* Could be more or less, depending on screen size */#}
+{#    }#}
+{##}
+{#    /* Style the horizontal ruler */#}
+{#    hr {#}
+{#        border: 1px solid #f1f1f1;#}
+{#        margin-bottom: 25px;#}
+{#    }#}
+{##}
+{#    /* The Close Button (x) */#}
+{#    .close {#}
+{#        position: absolute;#}
+{#        right: 35px;#}
+{#        top: 15px;#}
+{#        font-size: 40px;#}
+{#        font-weight: bold;#}
+{#        color: #f1f1f1;#}
+{#    }#}
+{##}
+{#    .close:hover,#}
+{#    .close:focus {#}
+{#        color: #f44336;#}
+{#        cursor: pointer;#}
+{#    }#}
+{##}
+{#    /* Clear floats */#}
+{#    .clearfix::after {#}
+{#        content: "";#}
+{#        clear: both;#}
+{#        display: table;#}
+{#    }#}
+{##}
+{#    /* Change styles for cancel button and signup button on extra small screens */#}
+{#    @media screen and (max-width: 300px) {#}
+{#        .cancelbtn, .signupbtn {#}
+{#            width: 100%;#}
+{#        }#}
+{#    }#}
+{#</style>#}
+{##}
+{#<body>#}
+{##}
+{#<h2>RecoverRight Register Page</h2>#}
+{##}
+{#<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>#}
+{##}
+{#<div id="id01" class="modal">#}
+{#    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>#}
+{#    <form class="modal-content animate" action="{% url 'account:register' %}" method="post">#}
+{#        {% csrf_token %}#}
+{#        {% for non_field_error in form.non_field_errors %}#}
+{#            <p class="help is-danger">{{ non_field_error }}</p>#}
+{#        {% endfor %}#}
+{##}
+{#        <div class="container">#}
+{#            <h1>Sign Up</h1>#}
+{#            <p>Please fill in this form to create an account.</p>#}
+{#            <hr>#}
+{#            <label for="username"><b>Username</b></label>#}
+{#            <input type="text" placeholder="Enter Username" name="username" required>#}
+{##}
+{##}
+{#            <label for="email"><b>Email</b></label>#}
+{#            <input type="text" placeholder="Enter Email" name="email" required>#}
+{##}
+{#            <label for="password"><b>Password</b></label>#}
+{#            <input type="password" placeholder="Enter Password" name="password" required>#}
+{##}
+{#            <label for="password2"><b>Repeat Password</b></label>#}
+{#            <input type="password" placeholder="Repeat Password" name="password2" required>#}
+{##}
+{#            <label>#}
+{#                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me#}
+{#            </label>#}
+{##}
+{##}
+{#            <div class="clearfix">#}
+{#                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>#}
+{##}
+{#                <button type="submit" class="signupbtn">Sign Up</button>#}
+{##}
+{##}
 {#            </div>#}
+{#        </div>#}
+{#    </form>#}
+{#</div>#}
 {##}
-{#        <div class="panel-footer">#}
-{#            Already have an account?<a href="{% url 'account:login' %}">Click here</a> to login.#}
-{#        </div>#}
-{#        </div>#}
-{#    </div>#}
-{#{% endblock %}#}
-
-<!DOCTYPE html>
-<html>
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box}
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
-
-/* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
-
-/* Set a style for all buttons */
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-}
-
-button:hover {
-    opacity:1;
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
-}
-
-/* Add padding to container elements */
-.container {
-    padding: 16px;
-}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #474e5d;
-    padding-top: 50px;
-}
-
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* Style the horizontal ruler */
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
-}
-
-/* The Close Button (x) */
-.close {
-    position: absolute;
-    right: 35px;
-    top: 15px;
-    font-size: 40px;
-    font-weight: bold;
-    color: #f1f1f1;
-}
-
-.close:hover,
-.close:focus {
-    color: #f44336;
-    cursor: pointer;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
-    }
-}
-</style>
-<body>
-
-<h2>Modal Signup Form</h2>
-
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
-
-<div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" action="{% url 'account:register' %}" method="post">
-      {% csrf_token %}
-      {% for non_field_error in form.non_field_errors %}
-          <p class="help is-danger">{{ non_field_error }}</p>
-      {% endfor %}
-{#      {% for field in form %}#}
-{#          <div class="field">#}
-{#              <label for="{{ field.id_for_label }}" class="label">{{ field.html_name }}</label>#}
-{#              {{ field }}#}
-{#              {% for error in field.errors %}#}
-{#                  <p class="help is-danger">{{ error }}</p>#}
-{#              {% endfor %}#}
-{#          </div>#}
-{#      {% endfor %}#}
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-        <label for="username"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="username" required>
-
-
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
-
-      <label for="password"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="password" required>
-
-      <label for="password2"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="password2" required>
-
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
-
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-      <div class="clearfix">
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-{#        <button type="button" onclick="{{% url 'account:register' %}}" class="cancelbtn">Cancel</button>#}
-
-          <button type="submit" class="signupbtn">Sign Up</button>
-
-
-      </div>
-    </div>
-  </form>
-</div>
-
 {#<script>#}
 {#// Get the modal#}
 {#var modal = document.getElementById('id01');#}
@@ -210,14 +176,120 @@ hr {
 {#    }#}
 {#}#}
 {#</script>#}
+{##}
+{#<div class="panel-footer">#}
+{#    Already have an account? <a href="{% url 'account:login' %}">Click here</a> to login.#}
+{#</div>#}
+{#</div>#}
+{##}
+{##}
+{#</body>#}
+{#</html>#}
+{##}
+{##}
 
-<div class="panel-footer">
-    Already have an account? <a href="{% url 'account:login' %}">Click here</a> to login.
-</div>
-    </div>
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+/* Add padding to containers */
+.container {
+    padding: 16px;
+    background-color: white;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+/* Overwrite default styles of hr */
+hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+}
+
+/* Set a style for the submit button */
+.registerbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+}
+
+.registerbtn:hover {
+    opacity: 1;
+}
+
+/* Add a blue text color to links */
+a {
+    color: dodgerblue;
+}
+
+/* Set a grey background color and center the text of the "sign in" section */
+.signin {
+    background-color: #f1f1f1;
+    text-align: center;
+}
+</style>
+</head>
+<body>
+
+{#<form action="/action_page.php">#}
+  <div class="container">
+      <form class="modal-content animate" action="{% url 'account:register' %}" method="post">
+          {% csrf_token %}
+          {% for non_field_error in form.non_field_errors %}
+              <p class="help is-danger">{{ non_field_error }}</p>
+          {% endfor %}
+
+
+          <h1>Register</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
+
+    <label for="username"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="username" required>
+
+    <label for="password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="password" required>
+
+    <label for="password2"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="password2" required>
+    <hr>
+
+    <button type="submit" class="registerbtn">Register</button>
+  </div>
+
+  <div class="container signin">
+    <p>Already have an account? <a href="{% url 'account:login' %}">Sign in</a>.</p>
+  </div>
+</form>
 
 </body>
 </html>
-
-
