--- a/templates/goals/delete_goal.html
+++ b/templates/goals/delete_goal.html
@@ -1,33 +1,3 @@
-{#{% extends 'base.html' %}#}
-{##}
-{#<html>#}
-{#<head>#}
-{#<meta charset="UTF-8">#}
-{#<title>Delete Goal</title>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#/*{%if request.user.is_authenticated and request.user.username == creator %}*/#}
-{##}
-{##}
-{##}
-{#<h1>Delete {{ goal.title }}?</h1>#}
-{##}
-{##}
-{#<form method="POST" action="">#}
-{#{% csrf_token %}#}
-{#Are you sure you want to delete this post?#}
-{#<input type="submit" value="Yes"/>#}
-{#<a href="/goals/">Cancel </a>#}
-{#</form>#}
-{#{% endif %}#}
-{##}
-{#{%if request.user.username != creator %}#}
-{#<h1>You cannot delete this entry</h1>#}
-{#{% endif %}#}
-{#</body>#}
-{#</html>#}
-
 {% extends 'base.html' %}
 
 {% block head %}
@@ -36,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-    <h1>Delete {{ goal.title }}</h1>
+    <h1>Delete:  {{ goal.title }}</h1>
         <form method="POST" action="">
             {% csrf_token %}
             Are you sure you want to delete this goal?
